--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "akar-icons": "^1.9.20",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.0",
+    "framer-motion": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
